--- a/.github/workflows/CI-CD pipeline.yml
+++ b/.github/workflows/CI-CD pipeline.yml
@@ -19,7 +19,8 @@ jobs:
           msbuild-version: 'latest'
 
       - name: Build application
-        run: msbuild ./MyDotNet/MyDotNet.sln/p:Configuration=Release
+        run: msbuild "C:\Users\Samkelo Ndzondo\Downloads\GitHub repos\Samkelo-CI-CD_pipeline\MyDotNet\MyDotNet.sln" /p:Configuration=Release
+
 
   test:
     needs: build
@@ -35,7 +36,7 @@ jobs:
           msbuild-version: 'latest'
 
       - name: Build application
-        run: msbuild ./MyDotNet/MyDotNet.sln/p:Configuration=Release
+        run: msbuild "C:\Users\Samkelo Ndzondo\Downloads\GitHub repos\Samkelo-CI-CD_pipeline\MyDotNet\MyDotNet.sln" /p:Configuration=Release
 
       - name: Run tests (replace with actual test commands)
         run: echo "Running tests..."
@@ -54,7 +55,7 @@ jobs:
           msbuild-version: 'latest'
 
       - name: Build application
-        run: msbuild ./MyDotNet/MyDotNet.sln/p:Configuration=Release
+        run: msbuild "C:\Users\Samkelo Ndzondo\Downloads\GitHub repos\Samkelo-CI-CD_pipeline\MyDotNet\MyDotNet.sln" /p:Configuration=Release
 
       - name: Deploy to staging (replace with actual deployment steps)
         run: echo "Deploying to staging..."
