--- a/.github/workflows/CI-CD pipeline.yml
+++ b/.github/workflows/CI-CD pipeline.yml
@@ -58,3 +58,16 @@ jobs:
 
       - name: Deploy to staging (replace with actual deployment steps)
         run: echo "Deploying to staging..."
+  notify:
+    name: Notify team on success
+    runs-on: windows-latest
+    needs: [build, test, deploy]
+
+    steps:
+      - name: Check for build, test, or deployment success
+        id: Check-status
+        run: echo "Build, test, and deployment successful!"
+
+      - name: Send notification on success
+        if: steps.build.outcome == 'success' && steps.test.outcome == 'success' && steps.deploy.outcome == 'success'
+        run: echo "Build, test, and deployment successful! Notify the team"
